add react, antd, webpack, godep.

--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,2 @@
-<script type="text/javascript" src="../static/js/cust/control_index.js"></script>	
-
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading">Meta Information</div>
-
-  <div>
-    <label class="control-label">Upload File From Folder</label>
-    <input id="input-folder-1" name="uploadfile" type="file" class="file-loading" multiple webkitdirectory>
-  </div>
-
-</div>
-
+<div id="patientlist"></div>
 	
