--- a/views/layout.html
+++ b/views/layout.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
-<html  lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>DICOM VIEWER</title>
-		<link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css" >
-		<link type="text/css" rel="stylesheet" href="../static/css/fileinput.min.css">
-	
-		<script type="text/javascript" src="../static/js/jquery-2.1.4.min.js"></script>
-		<script type="text/javascript" src="../static/js/fileinput.min.js"></script>
-		<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="../static/js/jquery.cookie.js"></script>
 
-		<script type="text/javascript" src="../static/js/cust/func.js"></script>				
-	</head>
-	<body>
-		<nav class="navbar navbar-default">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="#">DICOM VIEWER</a>
-				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li><a href="/list">列表</a></li>
-						<li><a href="/new">新建</a></li>
-						<li><a href="/admin">管理</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-		{{.LayoutContent}}
-	</body>
+<html>
+
+<head>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1">
+
+  <title>godcmviewer</title>
+
+</head>
+
+<body>
+  <div id="godcmMenu"></div>
+  {{.LayoutContent}}
+  <script src="../static/dist/godcmviewer.js"></script>
+</body>
+
 </html>
