1. add dev and prod mode for webpack 2. use pixi applicaton.

--- a/views/layout.html
+++ b/views/layout.html
@@ -15,7 +15,7 @@
 <body>
   <div id="godcmMenu"></div>
   {{.LayoutContent}}
-  <script src="../static/dist/godcmviewer.js"></script>
+  <script src="../static/dist/bundle.js"></script>
 </body>
 
 </html>
